--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -1,7 +1,7 @@
 <body class="body-Login-back">
 
     <div class="container">
-       
+    
         <div class="row">
             <div class="col-md-4 col-md-offset-4 text-center logo-margin ">
               <img src="assets/img/logo.png" alt=""/>
@@ -9,9 +9,12 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">                  
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
+                        <h3 class="panel-title">Please Register In</h3>
                     </div>
                     <div class="panel-body">
+                        <div class="control-label has-error" *ngIf="error">
+                            {{error}}
+                        </div>
                         <form [formGroup]="register" #f="ngForm" (ngSubmit)="formSubmit(register.value, register.valid)" role="form">
                             <fieldset>
                                 <div class="form-group has-error" [ngClass]="{'has-error': (register.controls.EmailId.touched && register.controls.EmailId.errors) || (f.submitted && register.controls.EmailId.errors)}">
@@ -20,20 +23,63 @@
                                     <label class="control-label" for="text" *ngIf="(register.controls.EmailId.touched && register.controls.EmailId.errors?.pattern) || (f.submitted && register.controls.EmailId.errors?.pattern)">EmailID invalid</label>
                                     
                                 </div>
-                               
-                                <div class="checkbox">
-                                    <label>
-                                        <input name="remember" type="checkbox" value="Remember Me">Remember Me
-                                    </label>
+                                  <div class="form-group has-error" [ngClass]="{'has-error': (register.controls.Gender.touched && register.controls.EmailId.errors) || (f.submitted && register.controls.Gender.errors)}">
+                                      <label>Gender</label>
+                                      <div class="row">
+                                   <label class="md-check col-md-4">
+                                       <input type="radio" value="male" name="Gender" formControlName="Gender">
+                                                     Male
+                                         </label>
+
+                                     <label class="md-check">
+                                        <input type="radio" value="female" name="Gender" formControlName="Gender">     
+                                                 Female
+                                          </label>
+                                      </div>
+                                    <label class="control-label" for="text" *ngIf="(register.controls.Gender.touched && register.controls.Gender.errors?.required) || (f.submitted && register.controls.Gender.errors?.required)">Gender should not be Empty</label>
+                                    
+                                </div> 
+                                 <div class="form-group has-error" [ngClass]="{'has-error': (register.controls.DOB.touched && register.controls.DOB.errors) || (f.submitted && register.controls.DOB.errors)}">
+                                 <input name="someName" formControlName="DOB" [dpDayPicker]="config" />
+                                     <label class="control-label" for="text" *ngIf="(register.controls.DOB.touched && register.controls.DOB.errors?.required) || (f.submitted && register.controls.DOB.errors?.required)">Date should not be Empty</label>
+                                    <label class="control-label" for="text" *ngIf="(register.controls.DOB.touched && register.controls.DOB.errors?.pattern) || (f.submitted && register.controls.DOB.errors?.pattern)">EmailID invalid</label>
+                                </div> 
+                                <div formGroupName = "passgroup">
+                                 <div class="form-group has-error" [ngClass]="{'has-error': (register.controls.passgroup.controls.Password.touched && register.controls.passgroup.controls.Password.errors) || (f.submitted && register.controls.passgroup.controls.Password.errors)}">
+                                    <input class="form-control" placeholder="Password" name="Password" type="password"  formControlName="Password">
+                                    <label class="control-label" for="text" *ngIf="(register.controls.passgroup.controls.Password.touched && register.controls.passgroup.controls.Password.errors?.required) || (f.submitted && register.controls.passgroup.controls.Password.errors?.required)">Password should not be Empty</label>
+                                    <label class="control-label" for="text" *ngIf="(register.controls.passgroup.controls.Password.touched && register.controls.passgroup.controls.Password.errors?.minlength) || (f.submitted && register.controls.passgroup.controls.Password.errors?.minlength)">Password Must be atleast 6Characters</label>
+                                    
                                 </div>
+                                 <div class="form-group has-error" [ngClass]="{'has-error': (register.controls.passgroup.controls.Confirm.touched && register.controls.passgroup.invalid) || (f.submitted && register.controls.passgroup.invalid)}">
+                                    <input class="form-control" placeholder="Re-enter Password" name="Confirm" type="password"  formControlName="Confirm">
+                                    <label class="control-label" for="text" *ngIf="(register.controls.passgroup.controls.Confirm.touched && register.controls.passgroup.controls.Confirm.errors?.required) || (f.submitted && register.controls.passgroup.controls.Confirm.errors?.required)">Confirm Password should not be Empty</label>
+                                    <label class="control-label" for="text" *ngIf="(register.controls.passgroup.controls.Confirm.touched && register.controls.passgroup.invalid) || (f.submitted && register.controls.passgroup.invalid)">Password doesn't match</label>
+                                    
+                                </div>
+                                  
+                                  
+                                </div>        
                                 <!-- Change this to a button or input when using this as a form -->
-                                <button class="btn btn-lg btn-success btn-block">Login</button>
+                                <button class="btn btn-lg btn-success btn-block">
+                                      <div *ngIf="reg_button">
+                                   Register
+                                </div>
+                                 <div *ngIf="loading">
+                             <img src="assets/img/loading.gif" alt=""/>
+                            </div>
+                                </button>
+                                
                             </fieldset>
                         </form>
                     </div>
+                  
                 </div>
             </div>
         </div>
+        <div class="row text-center">
+            <a href="login">Login Here</a>
+       </div>
     </div>
 
 
