--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -44,8 +44,8 @@
                 New User?<a href="register">Register Here</a>
                 </div>
                 <div class ="row">
-                <a type="button" class="btn btn-primary" href="http://localhost:2000/api/auth/google" >Login With Google</a>
-                   <a type="button" class="btn btn-primary" href="http://localhost:2000/api/auth/facebook">Login With Facebook</a>
+                <a type="button" class="btn btn-primary" href="/api/auth/google" >Login With Google</a>
+                   <a type="button" class="btn btn-primary" href="/api/auth/facebook">Login With Facebook</a>
                 </div>
             </div>
         </div>
